Block Toolbar: Fix sticky styling and toolbar for wide alignments

--- a/editor/modes/visual-editor/style.scss
+++ b/editor/modes/visual-editor/style.scss
@@ -273,7 +273,7 @@
 
 	&[data-align="full"],
 	&[data-align="wide"] {
-		.editor-block-toolbar {
+		.editor-block-contextual-toolbar {
 			@include break-small() {
 				width: $visual-editor-max-width - $block-padding - $block-padding;
 			}
@@ -533,7 +533,10 @@ $sticky-bottom-offset: 20px;
 	margin-top: - $block-toolbar-height - $block-padding - 1px;
 	margin-bottom: $block-padding + $sticky-bottom-offset;
 	white-space: nowrap;
+	text-align: left;
 	pointer-events: none;
+	height: $block-toolbar-height;
+	top: $header-height - 1px;
 
 	.editor-block-toolbar {
 		border: 1px solid $light-gray-500;
@@ -556,6 +559,10 @@ $sticky-bottom-offset: 20px;
 	@include break-small() {
 		margin-left: - $block-padding - 1px;
 		margin-right: - $block-padding - 1px;
+	}
+
+	@include break-medium() {
+		top: $item-spacing;
 	}
 }
 
